--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "author": "K.A Vasermans, M. Čudars, A. Skrastiņš, E. Jančevskis, D. Boroduļins",
   "license": "ISC",
   "dependencies": {
+    "buffer": "^6.0.3",
     "express": "*",
     "socket.io": "*",
     "tailwindcss": "^3.2.7"
-  },
-  "devDependencies": {
-    
   }
 }
